# eat

./: .gitignore  Cargo.toml  eat.txt  null
audio-latency-tracker/: .gitignore  Cargo.toml  DEPLOYMENT_GUIDE.md  Dockerfile  Makefile  PRODUCTION_PLAN.md  README.md  rust-toolchain.toml  test.sh
audio-latency-tracker/audio-latency/: Cargo.toml
audio-latency-tracker/audio-latency-ebpf/: Cargo.toml
audio-latency-tracker/audio-latency-ebpf/src/: main.rs
audio-latency-tracker/audio-latency/src/: config.rs  container.rs  main.rs  metrics.rs  signature.rs
audio-latency-tracker/audio-test-client/: Cargo.toml
audio-latency-tracker/audio-test-client/src/: main.rs
audio-latency-tracker/deploy/: configmap.yaml  daemonset.yaml  deploy.sh  namespace.yaml  rbac.yaml  service.yaml  servicemonitor.yaml
phase-0/examples/: generate_test_audio.py
phase-0/examples/bpf/: Dockerfile.minimal  Dockerfile.socket  Dockerfile.sockops  Dockerfile.tc  audio_patterns.h  audio_patterns_simple.h  audio_tracer.c  cni_bridge_finder.sh  debug-sockops.sh  kprobe_audio_tracer.c  minimal-counter-pod.yaml  minimal_counter_loader.go  minimal_tcp_counter.c  pod_interface_tracer.sh  pod_netns_tracer.sh  socket_audio_tracer.c  socket_loader.go  sockops-daemonset.yaml  sockops_audio_tracer.c  sockops_debug.c  sockops_loader.go  super_minimal.c  tc_audio_tracer.c  tc_loader.go  test_ebpf.sh  test_lo.sh  xdp_audio_tracer.c  xdp_loader.go
phase-0/examples/k8s/: socket-ebpf-tracer.yaml
phase-1-poc/: Cargo.toml  build.rs
phase-1-poc/src/: main.rs
phase-1-poc/src/ebpf/: tracer.c
phase-2-data-capture/: Cargo.toml  README.md  build.rs
phase-2-data-capture/src/: main.rs
phase-2-data-capture/src/ebpf/: tracer.c
