[workspace]
members = [
    "audio-latency-ebpf",
    "audio-latency",
    "audio-test-client",
]
resolver = "2"

[workspace.dependencies]
aya = "0.13"
aya-log = "0.2"
aya-log-common = "0.1"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "net", "signal", "time", "io-util", "sync"] }
bytes = "1"
anyhow = "1"
clap = { version = "4.4", features = ["derive"] }
prometheus = "0.13"
axum = "0.7"