[package]
name = "audio-latency-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-ebpf = "0.1"
aya-log-ebpf = "0.1"

[build-dependencies]
aya-ebpf = "0.1"

[[bin]]
name = "audio-latency-ebpf"
path = "src/main.rs"

[profile.dev]
opt-level = 3
overflow-checks = false

[profile.release]
opt-level = 3
lto = true
panic = "abort"
codegen-units = 1