[package]
name = "audio-latency"
version = "0.1.0"
edition = "2021"

[dependencies]
aya = { workspace = true, features = ["async_tokio"] }
aya-log = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
libc = "0.2"

[build-dependencies]
aya = { workspace = true }